[package]
name = "p3-uni-stark-mt"
description = "Multi-trace STARK prover built on Plonky3 with minimal abstractions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Core Plonky3 dependencies (from workspace)
p3-air.workspace = true
p3-challenger.workspace = true
p3-commit.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-util.workspace = true
p3-maybe-rayon.workspace = true

# Utilities
itertools.workspace = true
tracing.workspace = true

[dev-dependencies]
# For testing
p3-baby-bear.workspace = true
p3-dft.workspace = true
p3-goldilocks.workspace = true
p3-mersenne-31.workspace = true
p3-fri.workspace = true
p3-keccak.workspace = true
p3-merkle-tree.workspace = true
p3-symmetric.workspace = true
rand.workspace = true

[features]
default = []
parallel = ["p3-maybe-rayon/parallel"]
